[workspace]
resolver = "2"
members = [
	"crates/diffbelt",
	"crates/diffbelt_cli",

	"crates/diffbelt_cli_config",
	"crates/diffbelt_types",
	"crates/diffbelt_util",
	"crates/diffbelt_http_client",
	"crates/diffbelt_macro",
	"crates/diffbelt_transforms",

	"crates/diffbelt_yaml",
]
exclude = [
	"crates/diffbelt_example_wasm",
]