[package]
name = "diffbelt_cli"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive", "string"] }
tokio = { version = "1.22.0", features = ["full"] }
hyper = { version = "0.14.23", features = ["full"] }

[dependencies.diffbelt_types]
path = "../diffbelt_types"

[dependencies.diffbelt_util]
path = "../diffbelt_util"

[dependencies.diffbelt_http_client]
path = "../diffbelt_http_client"

[dependencies.diffbelt_cli_config]
path = "../diffbelt_cli_config"

[dependencies.diffbelt_transforms]
path = "../diffbelt_transforms"
