[package]
name = "diffbelt_cli_config"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = "1.0.91"
indexmap = { version = "2.0.0", features = ["serde"] }
lazy_static = "1.4.0"
regex = "1.7.0"
lexpr = "0.2.7"
chrono = "0.4.31"
wasmer = { version = "4.2.2", features = ["wat"] }
wasmer-types = "4.2.2"
tokio = "1.22.0"

[dependencies.diffbelt_util]
path = "../diffbelt_util"

[dependencies.diffbelt_yaml]
path = "../diffbelt_yaml"
