[package]
name = "diffbelt_cli_config"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = "1.0.91"
indexmap = { version = "2.2.5", features = ["serde"] }
lazy_static = "1.4.0"
regex = "1.7.0"
lexpr = "0.2.7"
chrono = "0.4.31"
wasmtime = "18.0.2"
tokio = "1.22.0"
thiserror = "1.0.50"
either = "1.9.0"
dioxus-hooks = "0.4.0"
enum_dispatch = "0.3.12"

[dependencies.diffbelt_util]
path = "../diffbelt_util"

[dependencies.diffbelt_util_no_std]
path = "../diffbelt_util_no_std"

[dependencies.diffbelt_yaml]
path = "../diffbelt_yaml"

[dependencies.diffbelt_protos]
path = "../diffbelt_protos"

[dependencies.diffbelt_example_protos]
path = "../diffbelt_example_protos"

[dependencies.diffbelt_wasm_binding]
path = "../diffbelt_wasm_binding"
