[package]
name = "diffbelt_http_client"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = [] }
tokio = { version = "1.22.0", features = ["full"] }
hyper = { version = "0.14.23", features = ["full"] }
serde_json = "1.0.91"
thiserror = "1.0.50"

[dependencies.diffbelt_types]
path = "../diffbelt_types"


[dependencies.diffbelt_util]
path = "../diffbelt_util"

[dependencies.diffbelt_transforms]
path = "../diffbelt_transforms"
