[package]
name = "diffbelt_transforms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generational-arena = "0.2.9"

[dependencies.diffbelt_types]
path = "../diffbelt_types"

[dependencies.diffbelt_util]
path = "../diffbelt_util"
