[package]
name = "diffbelt_transforms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generational-arena = "0.2.9"
urlencoding = "2.1.2"
thiserror = "1.0.50"

[dependencies.diffbelt_types]
path = "../diffbelt_types"

[dependencies.diffbelt_util]
path = "../diffbelt_util"

[dependencies.diffbelt_util_no_std]
path = "../diffbelt_util_no_std"

[dependencies.diffbelt_protos]
path = "../diffbelt_protos"
