[package]
name = "diffbelt_transforms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generational-arena = "0.2.9"
urlencoding = "2.1.2"
thiserror = "1.0.50"
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1.7.0"
lazy_static = "1.4.0"
lru = "0.12.1"
enum-as-inner = "0.6.0"
enum-kinds = "0.5.1"

[dependencies.diffbelt_types]
path = "../diffbelt_types"

[dependencies.diffbelt_util]
path = "../diffbelt_util"

[dependencies.diffbelt_util_no_std]
path = "../diffbelt_util_no_std"

[dependencies.diffbelt_protos]
path = "../diffbelt_protos"
