[package]
name = "diffbelt_types"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_with = "2.1.0"
base64 = "0.20.0"
thiserror = "1.0.50"

[dependencies.diffbelt_util]
path = "../diffbelt_util"
