[package]
name = "diffbelt_util"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22.0", features = ["full"] }
hyper = { version = "0.14.23", features = ["full"] }
futures = "0.3.25"
serde = { version = "1.0.152", features = ["derive"] }
serde_with = "2.1.0"
serde_json = "1.0.91"

[dependencies.diffbelt_util_no_std]
path = "../diffbelt_util_no_std"
