[package]
name = "diffbelt_util_no_std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror-no-std = { version = "2.0.2", default-features = false }
either = { version = "1.9.0", default-features = false, features = [] }
hashbrown = { version = "0.13.2", default-features = false, features = ["ahash"] }
