[package]
name = "diffbelt_wasm_binding"
version = "0.1.0"
edition = "2021"

[features]
default = []
panic = []

[dependencies]
thiserror-no-std = { version = "2.0.2", default-features = false }
bytemuck = { version = "1.14.3", features = ["derive"] }

[dependencies.diffbelt_util_no_std]
path = "../diffbelt_util_no_std"

[dependencies.diffbelt_protos]
path = "../diffbelt_protos"
