[package]
name = "diffbelt_yaml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unsafe-libyaml = "0.2.9"
serde = { version = "1.0.188", features = ["derive"] }

[dependencies.diffbelt_util]
path = "../diffbelt_util"
